    - Added a nice cozy sweater
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2023-11-4
  Features:
    - Allowed voiding of steam
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2023-11-4
  Features:
    - Increased quantum computer energy usage 6MW -> 5GW
    - Increased quantum computer module slots 1 -> 5
    - Allowed productivity in space science pack recipe (you'll need it)
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2023-11-4
  Features:
    - Added nexelit-titanium-kevlar-aramid-tritium-unobtanium superpolymer nanowoven biocomposite smart self-healing quantum N-dimensional hyperfabric
    - Blowing up chests will now spill their items on the ground
    - I am completely and mentally stable
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2023-10-12
  Features:
    - Fixed no way to void residual gas in pyblock
    - Changed mod icon (again)
    - Reduced void amount for gas vent from 100->50. speed doubled to compensate (2x as many filters needed)
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2023-9-17
  Features:
    - Added dependency on undeletable fluids
    - Decreased copper mining water usage 20 -> 10
    - Changed slacked lime voiding recipe
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2023-9-16
  Features:
    - Better mod thumbnail
    - Made it easier to void muddy sludge if pyblock is installed
    - Increased ash consumption in planter box recipe 3 -> 9
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2023-9-15
  Features: