@@ -45,6 +45,7 @@ minimum-temperature=Required temperature
 
 [technology-name]
 py-burner=Heat pipes
+sweater=Sweater
 
 [technology-description]
 py-burner=Technologies for the transfer of heat over distance. Heat pipes have a decay of 2°C per tile. You cannot lose energy. this only effects the max length heat can travel.
